@@ -1,3 +1,9 @@
+Wed Nov 15 23:23:10 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
+
+        * protocols/Makefile.am:
+
+          Add lost support for --disable-ace-tests and --disable-ace-examples
+
 Wed Nov 15 21:55:01 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
 
         * ace/Makefile.am:
